# neural-network-C

./: .gitignore  CMakeLists.txt  README.md
scripts/: build_unix.sh  prepare_data_unix.sh  run_unix.sh
src/: activationFunctions.c  activationFunctions.h  activationfunctions.c  activationfunctions.h  csv.c  csv.h  linearalgebra.c  linearalgebra.h  linearalgebratest.c  main.c  mnist.c  mnist.h  nn.c  nn.h  tests.c  tests.h  util.c  util.h
